fixed song search display gap and single song display bug

--- a/app/assets/stylesheets/discover.scss
+++ b/app/assets/stylesheets/discover.scss
@@ -7,8 +7,6 @@
   color:#053b78;
   max-height: 100%;
   overflow: scroll;
-  display: flex;
-  flex-direction: column;
   position: relative;
 
   h2 {
@@ -97,9 +95,6 @@
 .lists-container {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  height: 100%;
-  padding-bottom: 5%;
   margin-left: .8%;
 
   .song-list {
